--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-toastify": "7.0.4",
     "redux": "4.1.0",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "reselect": "4.0.0",
+    "typescript": "^4.4.3"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
@@ -32,7 +33,7 @@
     "eslint": "7.30.0",
     "eslint-loader": "4.0.2",
     "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "7.30.0",
     "fetch-mock": "9.11.0",
     "html-webpack-plugin": "5.3.2",
     "http-server": "0.12.3",
